--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@ footer {
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -216,16 +216,7 @@ footer {
   </div>
 </div>
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://www.kindpng.com/picc/m/292-2921633_chess-chess-icons-shah-of-persian-king-transparent.png" class="card-img-top" alt="...">
@@ -236,7 +227,16 @@ footer {
   </div>
 </div>
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://images.unsplash.com/photo-1588412079929-790b9f593d8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2hlc3N8ZW58MHx8MHx8&w=1000&q=80" class="card-img-top" alt="...">
@@ -248,17 +248,7 @@ footer {
 	  <a href="https://unblocked-x.com/startrepl.exe" class="btn btn-primary" target="_blank">Download Server Starter</a>
   </div>
 </div>
-		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	
 		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -283,7 +273,16 @@ footer {
 </div>
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 		
@@ -319,7 +318,16 @@ footer {
 		
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 
@@ -332,16 +340,7 @@ footer {
   </div>
 </div>
 
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://i.pinimg.com/originals/5e/45/c3/5e45c3f6445fba750c3b4776c7a298fb.gif" class="card-img-top" alt="...">
@@ -360,6 +359,16 @@ footer {
     <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://i.ytimg.com/vi/bTk6dcAckuI/maxresdefault.jpg" class="card-img-top" alt="...">
@@ -370,16 +379,7 @@ footer {
   </div>
 </div>
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -407,16 +407,7 @@ footer {
 </div>
 
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -437,7 +428,16 @@ footer {
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5227008/Backrooms%20v1.6%20-%20WebGL/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://archive.org/download/grey-box-testingv-0-1-4/Logo.png" class="card-img-top" alt="...">
@@ -458,17 +458,17 @@ footer {
 </div>
 		
 		
+
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/pewpew.png" class="card-img-top" alt="...">
@@ -488,14 +488,13 @@ footer {
   </div>
 </div>
 		
-		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -522,7 +521,16 @@ footer {
 		
 		
 		
-		
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -545,16 +553,7 @@ footer {
   </div>
 </div>
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 		
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/blastcity.png" class="card-img-top" alt="...">
@@ -575,7 +574,16 @@ footer {
 </div>
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 		
@@ -617,13 +625,13 @@ footer {
 </div>
 
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -659,18 +667,17 @@ footer {
 </div>
 		
 		
-		
+
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-		
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -701,16 +708,7 @@ footer {
   </div>
 </div>
 		
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
-<!-- cube ads -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
-     data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/wordl.gif" class="card-img-top" alt="...">
@@ -721,6 +719,16 @@ footer {
   </div>
 </div>
 
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/gift.png" class="card-img-top" alt="...">
@@ -741,17 +749,17 @@ footer {
 </div>
 		
 		
-		
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- cube ads -->
+<!-- bigger cube ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:200px;height:200px"
+     style="display:inline-block;width:288px;height:355px"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="5401571429"></ins>
+     data-ad-slot="7009633736"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>	
+	
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
